--- a/sass/main.scss
+++ b/sass/main.scss
@@ -631,7 +631,7 @@ section.close-menu {
         overflow: hidden;
     }
     .about-img {
-        background-image: url(../images/aditya1.jpg); /* Here You can edit your personal image */
+        background-image: url(../images/aditya.jpg); /* Here You can edit your personal image */
         height: 350px;
         width: 85%;
         margin: auto;
